--- a/SignUp.html
+++ b/SignUp.html
@@ -31,7 +31,7 @@
 <!-- Sign Up Form -->
 	<div class="account-pages">
 		<div class="form">
-			<form class="register-form" method="get" action="https://get-bit.herokuapp.com/">
+			<form class="register-form" method="get" action="https://coin-connect.herokuapp.com/">
 				<input type="hidden" name="op" value="new"> <!--designate new user operation-->
 				<input type="text" name="fullname" placeholder="Full Name"/>
 				<input type="text" name="username" placeholder="Username"/>
