--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,7 @@
 <!-- Login Form -->
 	<div class="account-pages">
 		<div class="form">
-			<form class="login-form" method="get" action="https://get-bit.herokuapp.com/">
+			<form class="login-form" method="get" action="https://coin-connect.herokuapp.com/">
 				<input type="hidden" name="op" value="login"> <!--designate login operation-->
 				<input type="text" name="username" placeholder="Username"/>
 				<input type="password" name="password" placeholder="Password"/>
