--- a/index.html
+++ b/index.html
@@ -268,9 +268,11 @@
 
 	<div class="module mid">
 	  <h2>CoinConnect</h2>
-	  <p>Track your Crypto Portfolio now!</p>
-	  <p> <a class="link_button" href="SignUp.html">Sign Up Now!</a> </p>
-	  <p> <a class="link_button" href="documentation.html">Learn More</a> </p>
+	  <p>
+		  Track your Crypto Portfolio now! <br>
+		  <a class="link_button" href="SignUp.html"> Sign Up Now! </a> <br>
+		  <a class="link_button" href="documentation.html"> Learn More </a> 
+	  </p>
 	</div>
 
 	 <div class="demo">
