--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 	<div class="module mid">
 	  <h2>CoinConnect</h2>
 	  <p>
-		  Track your Crypto Portfolio now! <br>
+		  Track your Crypto Portfolio now! <br><br>
 		  <a class="link_button" href="SignUp.html"> Sign Up Now! </a> <br>
 		  <a class="link_button" href="documentation.html"> Learn More </a> 
 	  </p>
