--- a/Account.html
+++ b/Account.html
@@ -135,7 +135,7 @@
 <!-- Insert/Delete Coin Form -->
         <div class="account-pages">
             <div class="form">
-                <form id=add_remove method="get" action="https://get-bit.herokuapp.com/">
+                <form id=add_remove method="get" action="https://coin-connect.herokuapp.com/">
                     <p style="color: white;">Add or Remove a coin</p>
                     <input type="hidden" name="username" id="username" value=""/>
                     <input type="hidden" name="password" id="password" value=""/>
